CV Judita Králíková - posunutý obrázek

--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ img {
     border-radius: 30% 0 30% 0;
     border: solid 2px #1a100b;
     padding: 30px;
-    margin: 15px}
+    margin: 15px 190px 0 0;
+}
     
 a {color:#1a100b}
 
